--- a/css/media.css
+++ b/css/media.css
@@ -9,6 +9,7 @@
 		width: 100%;
 		height: 669px;
 		background: url(../img/header_t.jpg) no-repeat;
+		background-position: center;
 		margin: 0 auto;
 	}
 
@@ -92,7 +93,8 @@
 
 	.left_product .button_position,
 	.card_product .button_position2 {
-		width: 354px;
+		/* width: 354px; */
+		width: 100%;
 	}
 
 	.tablet {
@@ -142,9 +144,9 @@
 		flex-wrap: wrap;
 	}
 
-	.header-logo {
+	/* .header-logo {
 		margin-top: 50px;
-	}
+	} */
 
 	.logo_wrapper {
 		display: flex;
@@ -173,7 +175,343 @@
 		display: block;
 	}
 
-	.button_up {
+	.footer_button {
+		margin: 40px 40px;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+@media screen and (min-width: 320px) and (max-width: 765px) {
+	html,
+	body {
+		width: 100%;
+		min-width: 320px;
+	}
+
+	header {
+		width: 100%;
+		height: 667px;
+		background: url(../img/header_m.jpg) no-repeat;
+		background-position: center;
+		/* margin: 0 auto; */
+	}
+
+	.header_nav {
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
+	.wrapper {
+		width: 100%;
+	}
+
+	#header_top {
+		width: 100%;
+		height: 125px;
+		display: block;
+		z-index: 10;
+		position: relative;
+	}
+
+	.header_nav .header_logo {
+		margin: 8px 15px 0 0;
+	}
+
+	.header_nav .titles_logo {
+		margin: 10px 70px 0 0;
+	}
+
+	.titles_logo h6 a {
+	/* margin: 30px; */
+}
+
+.information a:nth-of-type(1) {
+	margin-right: 5px;
+}
+
+.nav_item {
+	min-width: 100px;
+}
+
+	.information {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 0;
+	}
+
+	.information a:nth-of-type(1) {
+		margin-left: 8px;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.header_button {
+		display: none !important;
+	}
+
+	.information .menu {
+		padding: 5px;
+	}
+
+	.line {
 		display: none;
 	}
+
+	.header_nav > .nav_item {
+		display: none;
+	}
+
+	.btn-menu {
+	display: block;
+	position: absolute;
+	top: 18px;
+	right: 14px;
+	}
+
+	.titles {
+		padding-left: 13px;
+		margin-top: 70px;
+	}
+
+	.titles h1 {
+	font: 900 28px/34px "Montserrat", sans-serif;
+	margin-bottom: 30px;
+	}
+
+	.titles h1 span {
+		display: none;
+	}
+
+	.titles_logo h6 a {
+		margin: 0;
+	}
+
+	.popular_bounquet > h2 > a {
+	font: 900 18px/22px "Montserrat", sans-serif;
+}
+
+	.slider_wrapper {
+		width: 737px;
+		padding: 0;
+		margin: 0;
+	}
+
+	.slider {
+		padding: 0;
+	}
+
+	.slider__item {
+		padding: 0;
+	}
+
+	.slider .slick-arrow.slick-prev,
+	.slider .slick-arrow.slick-next {
+		display: none !important;
+	}
+
+		.slider .slick-dots {
+		margin-left: 110px;
+		height: 100%;
+		width: 100px;
+			display: flex;
+	align-items: center;
+	justify-content: center;
+	}
+
+.slider__item > h4 > a {
+	margin: 20px 55px 12px 0;
+}
+
+.slider__item > h3 > a {
+margin-right: 55px;
+}
+
+	.popular_bounquet .slider {
+		width: 795px;
+	}
+
+	.slider_bottom .slider {
+		width: 795px;
+	}
+
+	.left_product .button_position,
+	.card_product .button_position2 {
+		width: 100%;
+		bottom: 4px;
+	}
+
+	.tablet {
+		display: block;
+	}
+
+	.tablet2 {
+		display: none;
+	}
+
+	.left_product, 
+	.right_product {
+		display: none;
+	}
+
+	.mobile {
+		display: flex;
+	}
+
+	.product_wrapper {
+		display: flex;
+		justify-content: center;
+	}
+
+	.order {
+		width: 100%;
+		height: 641px;
+		background: url(../img/background_m.jpg) no-repeat;
+		background-position: center;
+	margin-top: 0;
+	align-items: flex-start;
+	}
+
+	.button_size {
+		margin: 12px 0 50px 77px;
+	}
+
+	.catalog {
+		width: 100%;
+		margin-bottom: 50px;
+	}
+
+	.wrapper_inputs {
+		width: 290px;
+		height: 514px;
+		margin: 50px 0 0 -200px;
+	}
+
+	.inputs {
+		width: 290px;
+		height: 514px;
+		margin-left: 215px;
+	}
+
+	.inputs h2 {
+	/* margin: 136px 0 21px 0; */
+}
+
+.inputs p {
+	margin-bottom: 20.76px;
+	padding: 0 18px;
+}
+
+form input {
+	width: 254px;
+}
+
+form .button {
+	padding: 0;
+}
+
+	footer {
+		margin: 0 auto;
+		height: 334px;
+	}
+
+	.footer_wrapper .nav_item {
+	min-width: 300px;
+	/* height: 100%; */
+}
+
+	.footer_nav {
+		height: 334px;
+		max-width: 320px;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+	}
+
+	.logo_wrapper {
+		height: 100%;
+		display: flex;
+		/* margin: 50px 105px 29px 14px; */
+		margin-top: 52px;
+	}
+
+	.footer_wrapper .header_logo {
+		margin-right: 20px;
+	}
+
+	.footer_nav > .nav_item {
+		width: 290px;
+		margin-top: -75px;
+	}
+
+	.footer_nav > .nav_item a:first-child {
+	font: bold 10px/12px "Montserrat", sans-serif;
+	letter-spacing: -0.025em;
+}
+
+.footer_nav > .nav_item a {
+	font: 500 10px/12px "Montserrat", sans-serif;
+	letter-spacing: -0.025em;
+	margin-right: 15px;
+}
+
+.footer_nav > .nav_item a:last-child {
+	margin: 0 21px 0 0;
+}
+
+	.footer_nav .information {
+		width: 20px;
+		height: 100%;
+		margin: 0;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		margin-bottom: 80px;
+	}
+
+	.footer_nav .information a:nth-of-type(1) {
+		margin-top: -6px;
+	}
+
+		.footer_nav .information :nth-child(3) {
+		margin-top: 33px;
+	}
+
+	.footer_button {
+		margin: 0 3px 0 12px;
+	}
+
+	.button_up {
+	display: block;
+	position: absolute;
+	background: url(../img/up.svg);
+	width: 17px;
+	height: 23.46px;
+	margin: 220px 35px 0 32px;
+	/* margin-top: 210px; */
+	
+	}
+
+	.button_up_tablet {
+		display: none;
+	}
+
+
+
+
 }
