--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ header {
 	margin-right: 10px;
 }
 
-.titles_logo a {
+.titles_logo h5 a {
 	font: bold 13px/16px "Montserrat", sans-serif;
 	letter-spacing: 0.095em;
 	text-transform: uppercase;
@@ -460,7 +460,7 @@ footer {
 	cursor: pointer;
 	transition: right 0.23s;
 	z-index: 3;
-	width: 33px;
+	width: 43px;
 	-webkit-transform: translateZ(0);
 	-webkit-backface-visibility: hidden;
 }
@@ -469,7 +469,7 @@ footer {
 	display: block;
 	height: 2px;
 	background-color: #fff;
-	margin: 5px 0 0;
+	margin: 8px 0 0;
 	transition: all 0.1s linear 0.23s;
 	position: relative;
 }
