--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,4 @@
+/* tablet */
 @media screen and (min-width: 766px) and (max-width: 1181px) {
 	html,
 	body {
@@ -45,12 +46,6 @@
 		margin-top: 22px;
 	}
 
-	.slider .slick-dots {
-		margin-left: 340px;
-		height: 100%;
-		width: 100px;
-	}
-
 	.header_nav > .nav_item {
 		display: none;
 	}
@@ -65,28 +60,6 @@
 
 	.titles_logo h6 a {
 		margin: 0;
-	}
-
-	.slider__item {
-		padding: 0;
-	}
-
-	.slider .slick-arrow.slick-prev,
-	.slider .slick-arrow.slick-next {
-		display: none !important;
-	}
-
-	.slider_wrapper {
-		width: 737px;
-		padding: 0;
-	}
-
-	.popular_bounquet .slider {
-		width: 1146px;
-	}
-
-	.slider_bottom .slider {
-		width: 1114px;
 	}
 
 	.left_product .button_position,
@@ -109,14 +82,13 @@
 	}
 
 	.catalog {
-	max-width: 738px;
-	max-height: 747px;
-	margin: 0 auto;
-	margin-bottom: 136px;
+		max-width: 738px;
+		max-height: 747px;
+		margin: 0 auto;
+		margin-bottom: 136px;
 	}
 
 	.wrapper_inputs {
-		/* height: 558px; */
 		height: 100%;
 		margin: 40px 0 0 -200px;
 	}
@@ -177,6 +149,7 @@
 	}
 }
 
+/* mobile */
 @media screen and (min-width: 320px) and (max-width: 765px) {
 	html,
 	body {
@@ -285,50 +258,6 @@
 		font: 900 18px/22px "Montserrat", sans-serif;
 	}
 
-	.slider_wrapper {
-		width: 737px;
-		padding: 0;
-		margin: 0;
-	}
-
-	.slider {
-		padding: 0;
-	}
-
-	.slider__item {
-		padding: 0;
-	}
-
-	.slider .slick-arrow.slick-prev,
-	.slider .slick-arrow.slick-next {
-		display: none !important;
-	}
-
-	.slider .slick-dots {
-		margin-left: 110px;
-		height: 100%;
-		width: 100px;
-		display: flex;
-		align-items: center;
-		justify-content: center;
-	}
-
-	.slider__item > h4 > a {
-		margin: 20px 55px 12px 0;
-	}
-
-	.slider__item > h3 > a {
-		margin-right: 55px;
-	}
-
-	.popular_bounquet .slider {
-		width: 795px;
-	}
-
-	.slider_bottom .slider {
-		width: 620px;
-	}
-
 	.left_product .button_position,
 	.card_product .button_position2 {
 		width: 100%;
@@ -363,10 +292,6 @@
 		background: url(../img/background_m.jpg) center no-repeat;
 		margin-top: 0;
 		align-items: flex-start;
-	}
-
-	.button_size {
-		margin: 12px 0 50px 77px;
 	}
 
 	.catalog {
