--- a/css/slider.css
+++ b/css/slider.css
@@ -99,11 +99,13 @@
 .slider .slick-arrow.slick-prev {
 	left: 0;
 	background: url("../img/sl-arrow_l.svg") 0 0 / 100% no-repeat;
+	cursor: pointer;
 }
 
 .slider .slick-arrow.slick-next {
 	right: 0;
 	background: url("../img/sl-arrow_r.svg") 0 0 / 100% no-repeat;
+	cursor: pointer;
 }
 
 .slider .slick-arrow.slick-disabled {
